<resources>
    <string name="app_name">Furniture Webshop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_please_log_in">Welcome, please log in!</string>
    <string name="product_name">Product name</string>
    <string name="product_description">Product description</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="log_in_as_guest">Log in as guest</string>
    <string name="already_registered">Already registered?</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
    <string name="searchbar">Searchbar</string>
    <string name="delete">Delete</string>

    <string-array name="furniture_item_name">
        <item>TECTA</item>
        <item>COBEA</item>
        <item>CLOCKWISE</item>
        <item>HARRY</item>
        <item>BREEZE</item>
        <item>EAMES DESK UNIT EDU</item>
        <item>MIRIA+</item>
        <item>REVO HIGH</item>
    </string-array>
    <string-array name="furniture_item_description">
        <item>Upholstered chair with armrests</item>
        <item>Teak garden chair with armrests</item>
        <item>Marble table</item>
        <item>Round wooden coffee table</item>
        <item>Round powder coated steel garden side table</item>
        <item>Rectangular aluminium and wood writing desk with bookcase</item>
        <item>Wardrobe</item>
        <item>Solid wood highboard with drawers</item>
    </string-array>
    <string-array name="furniture_item_price">
        <item>250</item>
        <item>300</item>
        <item>500</item>
        <item>450</item>
        <item>600</item>
        <item>1000</item>
        <item>1900</item>
        <item>1700</item>
    </string-array>
    <array name="furniture_item_image">
        <item>@drawable/chair</item>
        <item>@drawable/chair2</item>
        <item>@drawable/clockwise</item>
        <item>@drawable/coffetable</item>
        <item>@drawable/table2</item>
        <item>@drawable/edudesk</item>
        <item>@drawable/mobelhandwerk</item>
        <item>@drawable/szekreny2</item>
    </array>
</resources>
