<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/searchbar"
        android:icon="@drawable/search_icon"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_item"
        />
    <item
        android:id="@+id/settings_button"
        android:title="@string/settings"
        app:showAsAction="never"
        app:actionViewClass="com.google.android.material.search.SearchView"
        />
    <item
        android:id="@+id/logout_button"
        android:title="@string/logout"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        />
</menu>